--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@prisma/client": "^4.2.1"
   },
   "scripts": {
-    "init": "npx prisma init --datasource-provider mongodb && npx prisma generate && npm run dev",
+    "sync": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon"
