--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "sync": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx prisma generate && nodemon",
-    "dev": "NODE_ENV=dev nodemon & npx prisma studio"
+    "dev": "NODE_ENV=dev nodemon"
   },
   "author": "dev@bitev.io",
   "license": "MIT"
