--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "sync": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx prisma generate && nodemon",
+    "start": "npx prisma generate && node bitev.config.js",
     "dev": "NODE_ENV=dev nodemon"
   },
   "author": "dev@bitev.io",
