--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://user:password@cluster0.gfxktwy.mongodb.net/BITEV?retryWrites=true&w=majority"
+NODE_ENV=dev
