--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "bitev.io": "^0.1.20",
+    "bitev.io": "*",
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
