--- a/.env
+++ b/.env
@@ -1,8 +1,17 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+### MONGO DB DATABASE 
 
 DATABASE_URL="mongodb+srv://user:password@cluster0.gfxktwy.mongodb.net/BITEV?retryWrites=true&w=majority"
+
+### ENV
 NODE_ENV=dev
+
+
+### SECURITY
+SECRET_KEY_JWT=""
+
+
+#### ADMIN ACCOUNT
+ADMIN_EMAIL="admin@admin.com"
+ADMIN_PASSWORD="Password"
