--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "bitev-cms",
   "version": "2.0.2",
   "description": "",
-  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx prisma generate && node bitev.config.js",
+    "dev": "NODE_ENV=dev nodemon"
+  },
+
   "dependencies": {
     "bitev.io": "*",
     "nodemon": "*"
@@ -10,11 +15,20 @@
   "devDependencies": {
     "@prisma/client": "*"
   },
-  "scripts": {
-    "sync": "npx prisma generate",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx prisma generate && node bitev.config.js",
-    "dev": "NODE_ENV=dev nodemon"
+  "engines": {
+    "node": ">=14",
+    "yarn": ">=1.22 <2"
+  },
+  "maintainers": [
+    {
+      "name": "Bitev CMS",
+      "email": "dev@bitev.io",
+      "url": "https://cms.bitev.io"
+    }
+  ],
+
+  "repository": {
+    "url": "https://github.com/bitevio/bitev-cms"
   },
   "author": "dev@bitev.io",
   "license": "MIT"
